css/style.css
h1{
  font-size: 4vw;
  font-family: Bahnschrift SemiBold;
  background-color: SeaGreen;
}

body {
  background-color: DarkSeaGreen;
  position: relative;
  min-height: 100vh;
}

body::before {
  content: "";
  position: fixed;
  left: 0;
  top: 0;
  width: 100px; /* adjust width to match your image */
  height: 100vh;
  background-image: url("../images/ReunaVasen.png");
  background-repeat: repeat-y; /* repeat vertically */
  background-position: top left;
  background-size: contain;
  z-index: 1;
  pointer-events: none; /* allows clicking through the image */
}

.side-image-left {
  position: fixed;
  top: 0;
  left: 0;
  width: 100px; /* adjust width to match your image */
  height: auto;
  background-image: url("../images/ReunaOikea.png");
  background-repeat: repeat-y;
  background-position: top right;
  background-size: contain;
  z-index: 1;
  pointer-events: none;
}

.side-image-right {
  position: fixed;
  top: 0;
  right: 0;
  width: 100px; /* adjust width to match your image */
  height: auto;
  background-image: url("../images/ReunaOikea.png");
  background-repeat: repeat-y;
  background-position: top right;
  background-size: contain;
  z-index: 1;
  pointer-events: none;
}

p {
  font-size: 2vw;
  font-family: Copperplate Gothic Bold;
}

div {
  position: relative;
  z-index: 2; /* content appears above the background image */
}

